@@ -1,6 +1,8 @@
 0.9.0 (unreleased)
 ==================
 
+- Add Travis CI support.
+
 - Drop support for Python 2.6.
 
 0.8.3 (2014-08-07)
